--- a/tarea_42/styles_enlaces.css
+++ b/tarea_42/styles_enlaces.css
@@ -2,11 +2,6 @@ body {
     background-color: lightgreen;
 }
 
-.Logo {
-    float: right;
-    border: green 2px solid;
-}
-
 h1 {
     color: green;
     font-size: 20px;
@@ -28,37 +23,6 @@ h2 {
     text-indent: 30px
 }
 
-h3 {
-    color: white;
-    font-size: 20px;
-    font-family: Arial;
-    font-weight: bold;
-    font-style: oblique;
-    line-height: 15px;
-    letter-spacing: 1px;
-    text-decoration: underline;
-    text-transform: capitalize;
-    text-indent: 30px
-}
-
-p {
-    font-size: 1.2em;
-    color: black;
-    font-family: fantasy;
-    text-align: justify;
-    text-indent: 0px;
-    margin: 30px;
-}
-
-.TituloTarea {
-    font-size: 1em;
-    color: black;
-    font-family: fantasy;
-    text-align: justify;
-    margin: 30px;
-    margin-bottom: -10px;
-    margin-top: 5px;
-}
 
 hr {
     height: 5px;
@@ -66,15 +30,6 @@ hr {
     background-color: black;
 }
 
-.Apartados {
-    color: black;
-    list-style-type: upper-alpha;
-    margin: 20px;
-    margin-top: 15px;
-    font-family: Centaur;
-    grid-area: initial;
-    font-weight: bold;
-}
 
 .Enlaces {
     color: blue;
@@ -83,4 +38,13 @@ hr {
     font-weight: bold;
     margin-top: -15px;
     margin-bottom: 10px;
+}
+
+iframe{
+    margin:30px;
+    margin-top:5px;
+}
+video {
+    margin: 30px;
+    margin-top: 5px;
 }
